--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "cross-env NODE_ENV=production node ./bin/www"
   },
   "dependencies": {
+    "compression": "^1.7.5",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
